# cmsc701-final-project

./: .gitignore  CMSC701 Preso.pptx  README.md  codealike.json  compressor.java  convert.py  create_h5.py  loom_test.py  matrix_format_info.txt  results.txt  test.py
java_compressor/: PackedIntVectorUsingBitSet.java  compressor.java
rust_compressor/: Cargo.toml
rust_compressor/src/: main.rs
test1/other_formats/: csc1.npz
test1/other_versions/: csr1.npz
test1/our_compressed/: compressed_matrix1.7z  compressed_matrix1_v2.7z
test2/: barcodes.tsv
