[package]
name = "rust_compressor"
version = "0.1.0"
edition = "2021"

[dependencies]
rkyv = "0.8.10"
itertools = "0.14.0"
huffman-compress2 = { version = "0.7.0", features = ["serde"] }
minimum_redundancy = "0.3.2"
serde = { version = "1.0.219", features = ["derive"] }
bit-vec = { version = "0.8.0", features = ["serde"] }
bincode = { version = "2.0.0", features = ["serde"] }
bitfield-rle = "0.2.1"